fix post list alignment

--- a/src/styles/post-list.css
+++ b/src/styles/post-list.css
@@ -4,6 +4,7 @@
 
 .main h2, .main p {
   margin: 0;
+  justify-content: left;
 }
 
 .main ul {
